// index.js (Node.js gRPC Gateway - Nihai Versiyon)

import { spawn } from 'child_process';
import axios from 'axios';
import { v4 as uuidv4 } from 'uuid'; 
import grpc from '@grpc/grpc-js';
import protoLoader from '@grpc/proto-loader';
import path from 'path';
import { fileURLToPath } from 'url';
import fs from 'fs'; 

// --- YAPILANDIRMA ---
const __filename = fileURLToPath(import.meta.url);
const __dirname = path.dirname(__filename);

const TRAFFIC_PROTO_PATH = path.join(__dirname, 'traffic_proto.proto');
const GRPC_SERVER_ADDRESS = "localhost:50051"; 
const OSRM_BASE_URL = "http://router.project-osrm.org/route/v1/driving";
const PYTHON_SCRIPT = 'traffic_predictor_persistent.py';
const TIMEOUT_MS = 30000; 

// Python sanal ortam yolu
const PYTHON_EXECUTABLE_PATH = 'D:/Projeler/AkÄ±llÄ±TrafikSistemi/.venv/Scripts/python.exe'; 

let pythonProcess = null;
let pythonReady = false;
const requestMap = new Map();

// --- YardÄ±mcÄ± Fonksiyonlar ---

async function getOsrmRoute(startLat, startLng, endLat, endLng) {
    const url = `${OSRM_BASE_URL}/${startLng},${startLat};${endLng},${endLat}?overview=full&geometries=geojson&steps=true`;
    try {
        console.log(`[OSRM] Ä°stek gÃ¶nderiliyor: ${url.substring(0, 100)}...`);
        const response = await axios.get(url, { timeout: 15000 });
        if (!response.data || !response.data.routes || response.data.routes.length === 0) {
             throw new Error("NoRoute");
        }
        console.log(`[OSRM] BaÅŸarÄ±lÄ±: ${response.data.routes.length} rota bulundu.`);
        return response.data;
    } catch (e) {
        console.error(`ðŸ›‘ OSRM AÄž/HTTP HATASI (${e.code || e.message}): Rota alÄ±namadÄ±.`);
        if (e.message.includes("NoRoute")) {
             throw new Error('OSRM rotayÄ± bulamadÄ±.');
        }
        throw new Error('OSRM servisine eriÅŸilemiyor.');
    }
}

function sendToPython(data) {
    const requestId = uuidv4();
    data.requestId = requestId;

    return new Promise((resolve, reject) => {
        if (!pythonReady || !pythonProcess || !pythonProcess.stdin) {
            return reject(new Error("Python tahmin sÃ¼reci henÃ¼z hazÄ±r deÄŸil veya kapalÄ±."));
        }
        
        const timeout = setTimeout(() => {
            if (requestMap.has(requestId)) {
                requestMap.delete(requestId);
                console.error(`ðŸ›‘ [PYTHON TIMEOUT] Tahmin zaman aÅŸÄ±mÄ±na uÄŸradÄ± (${TIMEOUT_MS}ms) (ID: ${requestId})`);
                reject(new Error(`Python tahmin zaman aÅŸÄ±mÄ±na uÄŸradÄ± (${TIMEOUT_MS}ms)`));
            }
        }, TIMEOUT_MS);
        
        const newResolve = (value) => {
            clearTimeout(timeout);
            requestMap.delete(requestId); 
            resolve(value);
        };
        
        const newReject = (reason) => {
            clearTimeout(timeout);
            requestMap.delete(requestId); 
            reject(reason);
        };
        
        requestMap.set(requestId, { resolve: newResolve, reject: newReject });
        
        console.log(`[PYTHON >] GÃ¶nderiliyor (ID: ${requestId}): ${data.steps.length} adÄ±m.`);
        pythonProcess.stdin.write(JSON.stringify(data) + '\n', 'utf8', (err) => {
             if (err) {
                 newReject(new Error(`Python stdin'e yazma hatasÄ±: ${err.message}`));
             }
        });
    });
}

function startPythonProcess() {
    console.log(`[INIT] Python sÃ¼reci baÅŸlatÄ±lÄ±yor: ${PYTHON_EXECUTABLE_PATH} ile ${PYTHON_SCRIPT}`);
    
    try {
        pythonProcess = spawn(PYTHON_EXECUTABLE_PATH, [PYTHON_SCRIPT], {
            stdio: ['pipe', 'pipe', 'pipe'], 
        });
    } catch (error) {
         console.error(`ðŸ›‘ Python SÃ¼reÃ§ BaÅŸlatma HatasÄ±: ${error.message}. PYTHON_EXECUTABLE_PATH kontrol edin!`);
         return;
    }

    let stdoutBuffer = ''; 

    pythonProcess.stdout.setEncoding('utf8'); 
    pythonProcess.stderr.setEncoding('utf8'); 

    pythonProcess.stdout.on('data', (data) => {
        stdoutBuffer += data.toString();
        let newLineIndex;
        while ((newLineIndex = stdoutBuffer.indexOf('\n')) !== -1) {
            const line = stdoutBuffer.substring(0, newLineIndex).trim();
            stdoutBuffer = stdoutBuffer.substring(newLineIndex + 1);

            if (line === "PYTHON_READY") {
                pythonReady = true;
                console.log("âœ… Python SÃ¼reci: ML Modeli yÃ¼klendi ve iletiÅŸim hazÄ±r.");
                continue;
            }
            if (line.startsWith("INFO:") || !line) {
                 if(line) console.log(`[PY INFO] ${line}`);
                 continue;
            }

            try {
                const response = JSON.parse(line);
                const requestId = response.requestId;

                if (requestId && requestMap.has(requestId)) {
                    const { resolve, reject } = requestMap.get(requestId);
                    
                    if (response.error) {
                        console.error(`ðŸ›‘ [PYTHON <] Hata YanÄ±tÄ± (ID: ${requestId}): ${response.error}`);
                        reject(new Error(`Python Hata: ${response.error}`));
                    } else {
                        // Konsol logunda dakika cinsinden 2 ondalÄ±k gÃ¶sterim
                        console.log(`âœ… [PYTHON <] BaÅŸarÄ±lÄ± YanÄ±t (ID: ${requestId}). Toplam Tahmin: ${(response.totalPredictedDuration / 60).toFixed(2)} dk.`);
                        resolve(response);
                    }
                } else if (requestId) {
                    console.warn(`[WARN] Bilinmeyen veya zaman aÅŸÄ±mÄ±na uÄŸramÄ±ÅŸ requestId alÄ±ndÄ±: ${requestId}`);
                } else {
                    console.warn(`[WARN] Python'dan beklenmedik Ã§Ä±ktÄ± (JSON deÄŸil): ${line}`);
                }
            } catch (e) {
                console.error(`[CRITICAL] Python Ã§Ä±ktÄ±sÄ± JSON formatÄ±nda deÄŸil veya iÅŸlenemedi: ${line}`, e);
            }
        }
    });

    pythonProcess.stderr.on('data', (data) => {
        const lines = data.toString().trim().split('\n');
        lines.forEach(line => {
             console.error(`ðŸ”´ Python STDERR: ${line}`);
        });
       
        if (data.toString().includes("Model_Load_Error") || data.toString().includes("KRÄ°TÄ°K HATA: Model yÃ¼klenirken")) {
             pythonReady = false;
        }
    });

    pythonProcess.on('error', (err) => {
        console.error(`ðŸ›‘ Python SÃ¼reÃ§ HatasÄ±: SÃ¼reÃ§ baÅŸlatÄ±lamadÄ± veya Ã§alÄ±ÅŸtÄ±rÄ±lÄ±rken hata oluÅŸtu.`, err);
        pythonReady = false;
    });

    pythonProcess.on('close', (code) => {
        if (code !== 0) {
            console.error(`ðŸ›‘ Python sÃ¼reci ${code} koduyla sona erdi. Yeniden baÅŸlatÄ±lmalÄ±.`);
        } else {
            console.log(`[INFO] Python sÃ¼reci baÅŸarÄ±yla sona erdi (Kod 0).`);
        }
        pythonReady = false;
        for (const [id, { reject }] of requestMap) {
            reject(new Error(`Python sÃ¼reci kapandÄ±ÄŸÄ± iÃ§in istek baÅŸarÄ±sÄ±z oldu (ID: ${id})`));
        }
        requestMap.clear();
    });
}

// --- gRPC Servis YÃ¶ntemi UygulamasÄ± ---

async function predictTraffic(call, callback) {
    // Ham gRPC verilerini alÄ±n
    const { startLat: startLatReq, startLng: startLngReq, endLat: endLatReq, endLng: endLngReq } = call.request;

    // KoordinatlarÄ± float'a dÃ¶nÃ¼ÅŸtÃ¼r
    const sLat = parseFloat(startLatReq);
    const sLng = parseFloat(startLngReq);
    const eLat = parseFloat(endLatReq);
    const eLng = parseFloat(endLngReq);
    
    // GeÃ§ersiz koordinat kontrolÃ¼
    if (isNaN(sLat) || isNaN(sLng) || isNaN(eLat) || isNaN(eLng)) {
        return callback({
            code: grpc.status.INVALID_ARGUMENT,
            details: "GÃ¶nderilen enlem/boylam deÄŸerleri geÃ§erli sayÄ± formatÄ±nda deÄŸil."
        });
    }

    const requestDetails = `[${sLat.toFixed(4)},${sLng.toFixed(4)}] -> [${eLat.toFixed(4)},${eLng.toFixed(4)}]`;
    console.log(`\n======================================================`);
    console.log(`[gRPC Ä°STEK] Yeni Ä°stek AlÄ±ndÄ±: ${requestDetails}`);
    console.log(`======================================================`);
    
    try {
        if (!pythonReady) {
             throw new Error("ML modeli hazÄ±r deÄŸil veya yÃ¼klenemedi. LÃ¼tfen sunucu loglarÄ±nÄ± kontrol edin.");
        }
        
        const routeData = await getOsrmRoute(sLat, sLng, eLat, eLng);
        const mainRoute = routeData.routes[0];

        const stepsToSend = mainRoute.legs[0].steps.map(step => ({
            lat: step.maneuver.location[1], 
            lng: step.maneuver.location[0],
            distance: step.distance, 
            duration: step.duration, 
            name: step.name
        }));

        const pythonResponse = await sendToPython({ steps: stepsToSend });
        
        const totalPredictedDurationSeconds = pythonResponse.totalPredictedDuration; 
        const totalOsrmDurationSeconds = mainRoute.duration; 
        
        // ðŸŽ¯ KRÄ°TÄ°K DÃœZELTME: SÃ¼releri dakika cinsine Ã§evir ve 2 ondalÄ±k basamaÄŸa yuvarla
        const totalPredictedDurationMin = Math.round((totalPredictedDurationSeconds / 60) * 100) / 100;
        const totalOsrmDurationMin = Math.round((totalOsrmDurationSeconds / 60) * 100) / 100;
        
        const isAltBetter = totalPredictedDurationSeconds < totalOsrmDurationSeconds;
        const suggestionText = isAltBetter 
            ? "Tebrikler! Tahmin modelimiz, mevcut rotanÄ±n OSRM'in Ã¶nerdiÄŸinden daha kÄ±sa sÃ¼receÄŸini tahmin ediyor."
            : "Dikkat! Tahmin modelimiz, bu rotanÄ±n OSRM'in Ã¶nerdiÄŸinden daha uzun sÃ¼receÄŸini tahmin ediyor.";
            
        const finalResponse = {
            originalRoute: {
                geometry: JSON.stringify(mainRoute.geometry),
                steps: pythonResponse.predictions, 
                // YuvarlanmÄ±ÅŸ dakika deÄŸerlerini gÃ¶nder
                totalPredictedDuration: totalPredictedDurationMin, 
                totalOSRMDuration: totalOsrmDurationMin,
            },
            alternativeRoute: {
                suggestion: suggestionText,
                isAlternativeBetter: isAltBetter,
                alternativeMapData: "HenÃ¼z Alternatif Rota HesaplanmadÄ±" 
            }
        };

        console.log(`âœ… [gRPC YANIT] BaÅŸarÄ±yla gÃ¶nderildi. Tahmini SÃ¼re: ${totalPredictedDurationMin.toFixed(2)} dk.`);
        callback(null, finalResponse); 
        
    } catch (error) {
        console.error(`ðŸ›‘ [gRPC HATA] Ä°stek Ä°ÅŸlenemedi: ${error.message}`);
        let statusCode = grpc.status.INTERNAL;
        if (error.message.includes("OSRM rotayÄ± bulamadÄ±")) {
             statusCode = grpc.status.NOT_FOUND;
        } else if (error.message.includes("ML modeli hazÄ±r deÄŸil")) {
             statusCode = grpc.status.UNAVAILABLE;
        }

        return callback({
            code: statusCode,
            details: `Tahmin hizmeti hatasÄ±: ${error.message}`
        });
    }
}


// --- gRPC Sunucusunu BaÅŸlatma ---
function startGrpcServer() {
    try {
        if (!fs.existsSync(TRAFFIC_PROTO_PATH)) {
             throw new Error(`traffic_proto.proto dosyasÄ± bulunamadÄ±: ${TRAFFIC_PROTO_PATH}`);
        }
        const packageDefinition = protoLoader.loadSync(TRAFFIC_PROTO_PATH, {
            keepCase: true, longs: String, enums: String, defaults: true, oneofs: true
        });
        const trafficProto = grpc.loadPackageDefinition(packageDefinition).traffic;
        
        const server = new grpc.Server();
        
        server.addService(trafficProto.TrafficService.service, {
            predictTraffic: predictTraffic
        });

        server.bindAsync(GRPC_SERVER_ADDRESS, grpc.ServerCredentials.createInsecure(), (err, port) => {
            if (err) {
                console.error(`ðŸ›‘ gRPC Sunucusu baÅŸlatÄ±lamadÄ±: ${err.message}`);
                return;
            }
            console.log(`======================================================`);
            console.log(`ðŸ“¡ Node.js gRPC Sunucusu Ã‡alÄ±ÅŸÄ±yor: ${GRPC_SERVER_ADDRESS}`);
            console.log(`======================================================`);
        });
    } catch (error) {
         console.error(`ðŸ›‘ gRPC sunucu hazÄ±rlÄ±k hatasÄ±: ${error.message}`);
    }
}

// UygulamayÄ± baÅŸlat
startPythonProcess(); 
startGrpcServer();